correction du contraste

--- a/style.css
+++ b/style.css
@@ -118,49 +118,12 @@ a:hover {
     border-color: rgba(255, 255, 255, .2);
 }
 
-.d-bloc .a-btn,
-.d-bloc .navbar a,
-.d-bloc .navbar-brand,
-.d-bloc a .icon-sm,
-.d-bloc a .icon-md,
-.d-bloc a .icon-lg,
-.d-bloc a .icon-xl,
-.d-bloc h1 a,
-.d-bloc h2 a,
-.d-bloc h3 a,
-.d-bloc h4 a,
-.d-bloc h5 a,
-.d-bloc h6 a,
-.d-bloc p a {
-    color: #a94442;
-}
 
-.d-bloc .a-btn:hover,
-.d-bloc .navbar a:hover,
-.d-bloc .navbar-brand:hover,
-.d-bloc a:hover .icon-sm,
-.d-bloc a:hover .icon-md,
-.d-bloc a:hover .icon-lg,
-.d-bloc a:hover .icon-xl,
-.d-bloc h1 a:hover,
-.d-bloc h2 a:hover,
-.d-bloc h3 a:hover,
-.d-bloc h4 a:hover,
-.d-bloc h5 a:hover,
-.d-bloc h6 a:hover,
-.d-bloc p a:hover {
-    color: rgba(255, 255, 255, 1);
-}
 
 .d-bloc .navbar-toggle .icon-bar {
     background: rgba(255, 255, 255, 1);
 }
 
-.d-bloc .btn-wire,
-.d-bloc .btn-wire:hover {
-    color: rgba(255, 255, 255, 1);
-    border-color: rgba(255, 255, 255, 1);
-}
 
 .d-bloc .panel {
     color: rgba(0, 0, 0, .5);
@@ -456,7 +419,6 @@ nav .caret {
 .btn-d,
 .btn-d:hover,
 .btn-d:focus {
-    color: #FFF;
     background: rgba(0, 0, 0, .3);
 }
 
@@ -552,7 +514,6 @@ a[data-lightbox]:hover::before {
     top: 50%;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
-    font-display: swap;
 }
 
 a[data-lightbox]:hover img {
@@ -647,13 +608,11 @@ h4,
 h5,
 h6,
 p,
-label,
-.btn,
-a {
+label
+{
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
-    font-display: swap;
 }
 
 .container {
@@ -690,12 +649,11 @@ p {
 .h1 {
     font-size: 20px;
     font-family: "Open Sans";
-    font-display: swap;
 }
 
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF!important;
+    color: #FFFFFF;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
@@ -705,6 +663,7 @@ p {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    color: #FFF!important;
 }
 
 h2 {
@@ -779,15 +738,25 @@ h4 {
     color: white!important;
 }
 
+.cta-form {
+    background: #c27956!important;
+    color: #ffffff!important; 
+}
+.cta-form:hover {
+    background: #ffffff!important;
+    color:  #c27956!important;
+    box-shadow: 0px 0px 2px rgb(0, 0, 0);
+}
+
 .btn-atomic-tangerine {
-    background: #F3976C;
-    color: #FFFFFF!important;
+    background: #ffffff;
+    color: #c27956;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #FFFFFF!important;
-    color:  #c27956!important;
-    box-shadow: 0px 0px 10px rgb(0, 0, 0);
+    background: #c27956;
+    color:  #ffffff;
+    box-shadow: 0px 0px 2px rgb(0, 0, 0);
 }
 
 .ltc-white {
@@ -850,13 +819,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -874,10 +843,7 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
+   
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -886,8 +852,6 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
     }
 }
 
